@@ -5,8 +5,9 @@ glib2.0 (2.12.11-2) UNRELEASED; urgency=low
   * Include the new uploaders.mk from gnome-pkg-tools instead of duplicating
     its logic; build-dep on gnome-pkg-tools >= 0.11.
   * Drop useless version computations.
+  * Add support for DEB_BUILD_OPTIONS_PARALLEL.
 
- -- Loic Minier <lool@dooz.org>  Wed, 04 Apr 2007 17:30:40 +0200
+ -- Loic Minier <lool@dooz.org>  Thu, 05 Apr 2007 13:45:17 +0200
 
 glib2.0 (2.12.11-1) experimental; urgency=medium
 
